# eds6397-prj2-design-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/officeqa_rag/: __init__.py  chunking.py  data.py  experiment.py  filters.py  generator.py  metrics.py  retrievers.py
