[project]
name = "eds6397-officeqa-rag"
version = "0.1.0"
description = "Baseline and engineered RAG pipeline for the OfficeQA Treasury Bulletin assignment."
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "huggingface-hub>=0.24.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
officeqa-rag = "officeqa_rag.experiment:main"

[tool.ruff]
line-length = 100
src = ["src"]

